fixing the appDataTable not loading if no apps. Not showing newly inserted apps. productTable moved order of calling appDataTable to update.

--- a/force-app/main/default/lwc/appDataTable/appDataTable.css
+++ b/force-app/main/default/lwc/appDataTable/appDataTable.css
@@ -12,3 +12,6 @@
 .numSpace{
     margin-left: 2px;
 }
+.exampleHolder{
+    height: 300px;
+}
